<resources>
    <string name="app_name">opengl week 8</string>
    <string name="minusX">-X</string>
    <string name="plusX">+X</string>
    <string name="minusY">-Y</string>
    <string name="plusY">+Y</string>
    <string name="plusZ">+Z</string>
    <string name="minusZ">-Z</string>
    <string name="PlXuntiClowise">+XuntiClowise</string>
    <string name="NegXCloWise">-XCloWise</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
</resources>